--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "driazati.github.io"]
 	path = driazati.github.io
 	url = git@github.com:driazati/driazati.github.io
+[submodule "benchmarks/maskrcnn/vision"]
+	path = benchmarks/maskrcnn/vision
+	url = git@github.com:pytorch/vision.git
